--- a/style.css
+++ b/style.css
@@ -289,10 +289,10 @@
     color: #828282;
     margin-bottom: 24px;
   }
-  .card-left button {
+  .button_card2 {
     background-color: #2c2b2b;
     color: white;
-    border: 2px solid #2c2b2b;
+    border: 2px solid;
     border-radius: 8px;
     padding: 8px 24px;
     font-size: 14px;
