--- a/style.css
+++ b/style.css
@@ -146,34 +146,23 @@
   }
   
   .about .buttons .secondary {
-    background-color: transparent;
-    border: 2px solid #2c2b2b;
-    color: #2c2b2b;
+    background-color: #1DB954;
+    border: 2px solid #1DB954;
+    color: white;
     border-radius: 8px;
-    padding: 6px 12px;
+    padding: 8px 24px; 
     height: 42px;
     cursor: pointer;
+    font-size: 16px; 
+    transition: background-color 0.3s, box-shadow 0.3s, transform 0.3s;
   }
-  
-  /* .about .buttons .primary:hover {
-    color: #ccc;
-    transform: rotate(10deg);
-    transition: transform 0.3s ease;
-  } */
-  
+
   .about .buttons .secondary:hover {
-    color: #fff;
-    background-color: #2c2b2b;
+    background-color: white;
+    color: #1DB954;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
     transform: scale(1.05);
-    transition: backgorund-color 0.3s, box-shadow 0.3s, transform 0.3s;
   }
-  
-  /* .about .buttons .secondary:hover {
-      color: #fff;
-      transform: translateX(10px);
-      transition: transform 0.3s ease-in-out;
-    } */
   
   /* Styles para a section dos projetos */
   .projects,
